harness/clients/ratatui/tests/snapshots/conformance__task-surface.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
✓ read the plan
✓ write the differ
· run the tests
· tick the plan
── live ──












>
tokens — · — · execute · ^D exit
