harness/clients/ratatui/tests/snapshots/conformance__text-only.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
The workspace has three crates: proto, provider and kernel.
── live ──












>
tokens — · — · execute · ^D exit
