harness/clients/ratatui/tests/snapshots/conformance__tool-call.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
Let me look at the manifest.
▾ ✓ builtin.read
{"path":"Cargo.toml"}
name = "orrery"

── live ──












>
tokens — · — · execute · ^D exit
